--- a/login/static/style.css
+++ b/login/static/style.css
@@ -7,19 +7,30 @@
 body {
     height: 100%;
     width: 100%;
-    background-color: blue;
+    background-color: #2e5378;
+    
 }
 
 .background-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('../static/bk1.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-image: url('../static/poster.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.background-image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #ffffff00 0%, #1F283A 80%);
+  z-index: 1;
+}
   
   .half-container {
     position: absolute;
@@ -34,27 +45,46 @@ body {
     justify-content: center;
   }
 
+
+
   @media (max-width: 992px) {
     .half-container {
-      width: 100%;
+      width: 100% !important;
+      min-width: auto;
+      margin: auto;
     }
   }
   
+  @media (max-width: 992px) {
+    .login-container {
+      width: 95% !important;
+      height: 70% !important;
+    }
+  }
+
+  @media (max-width: 992px) {
+  .logo-container img {
+    max-width: 100% !important;
+    display: flex;
+    max-height: 110%;
+    margin-top: 1em !important;
+  }}
+
   .login-container {
     position: relative;
-    max-width: 480px;
+    max-width: 470px;
     width: 100%;
-    height: 65%;
-    max-width: 480px;
+    height: 60%;
     padding: 3%;
     background: rgba(255, 255, 255, 0.98);
     box-shadow: 0 -1px 2px rgb(61 58 180 / 10%), 0 6px 14px rgb(61 58 180 / 15%);
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 11px;
-    opacity: 95%;
+    opacity: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 999;
 }
 
 .login-child-container {
@@ -129,7 +159,7 @@ font-weight: 400;
 
   .copy-container {
     position: absolute;
-    bottom: 10px;
+    bottom: 0px;
     width: 100%;
     font-size: 12px;
 }
@@ -143,3 +173,25 @@ font-weight: 400;
     margin-left: 10px;
     font-family: 'Encode Sans Semi Condensed';
   }
+
+
+.background {
+  background-color: rgba(31, 40, 58, 0.814);
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  position: absolute;
+}
+
+ul.messages {
+  list-style: none;
+  color: red;
+  margin: 5px 0px;
+}
+
+
+@media (max-height: 601px) {
+.copy-container { 
+  bottom: 0px !important;
+}}
